<?xml version="1.0" encoding="utf-8"?>
<resources>
    <string name="app_name">Shetkari Mitra</string>
    <string name="your_message">Your message</string>
    <string name="app_developer">Feedback</string>
    <string name="chats">Forums</string>
    <string name="greetings">Greetings!</string>
    <string name="welcome">WELCOME!</string>
    <string name="nice_to_see_you">Nice to see you</string>
    <string name="login">Login</string>
    <string name="by_login_you_agree_with_our">By login you agree with our</string>
    <string name="terms_and_conditions">Terms and Conditions</string>
    <string name="my_crops">My Crops</string>
    <string name="crop_fertilizer_suggestion">Crop/Fertilizer Suggestion</string>
    <string name="projects">Projects</string>
    <string name="hello_there">Hello There!</string>
    <string name="mobile_number">Mobile Number</string>
    <string name="send_otp">Send OTP</string>
    <string name="your_name">Your Name</string>
    <string name="edit_name">Edit Name</string>
    <string name="log_out">Log Out</string>
    <string name="add_to_my_crop">Add To My Crop</string>
    <string name="verify_otp">Verify OTP</string>
    <string name="resend">Resend</string>
    <string name="did_not_received_otp">Did not received OTP?</string>
    <string name="weather_forecast">Weather Forecast</string>
    <string name="save_name">Save name</string>
    <string name="this_name_will_be_seen_by_others">This Name will be seen by others</string>
    <string name="gov_policies">Gov Policies</string>
    <string name="temperature">Temperature</string>
    <string name="wind_speed">Wind speed</string>
    <string name="description">Description</string>
    <string name="humidity">Humidity</string>
    <string name="Temp">"Temp: "</string>
    <string name="min_max">"Min / Max : "</string>
    <string name="wind">"Wind: "</string>
    <string name="humidity_">"Humidity: "</string>
    <string name="cultivation_guide">" Cultivation Guide"</string>
    <string name="Project_plan">" Project plan"</string>
    <string name="crop_deleted">Crop Deleted Successfully</string>
    <string name="please_wait">Please wait while we fetch weather data</string>
    <string name="Please_give">Please give GPS Permission</string>
    <string name="weather_unSuccess">Got Weather unSuccessfully</string>
    <string name="crop_added">Crop Added Successfully</string>
    <string name="Limit_reached">Limit Reached</string>
    <string name="crop_already">Crop is already added</string>
    <string name="new_forum">New Forum started by you</string>
    <string name="Greetings">"Greetings "</string>
    <string name="nameSavedToYourProfile">Name saved to your profile</string>
    <string name="bodyforemail">----Type Your Message after this----</string>
    <string name="Messagesent">Message sent</string>
    <string name="kisan_call_centre">Kisan call centre</string>
    <string name="common_forum">Common forum</string>
    <string name="Forum">" Forum"</string>
    <string name="please_enter_valid_otp">Please enter Valid OTP</string>
    <string name="OTP_sent">"OTP is Sent on "</string>
    <string name="Retry_after">"Retry after "</string>
    <string name="Wrong_otp">Wrong OTP is entered</string>
    <string name="OTP_Resent">OTP Resent</string>
    <string name="invalid_otp">Invalid OTP</string>
    <string name="enter_mobile">Enter Mobile number</string>
    <string name="otp_sent">OTP sent</string>
    <string name="waiting_for_otp">"waiting for auto-detect OTP, "</string>
    <string name="seconds">" seconds"</string>
    <string name="common">Common</string>
    <string name="fertilzer_suggetion">Fertilizer Suggestions</string>
    <string name="crop_suggestion">Crop Suggestion</string>
    <string name="add_crop">Add Crop</string>
    <string name="select_state">--Select State--</string>
    <string name="select_district">--Select District--</string>
    <string name="select_crop">--Select Crop--</string>
    <string name="wait_for_moment">Wait for a Moment</string>
    <string name="crop_select">Select Crop</string>
    <string name="something_went_wrong">Something went wrong</string>
    <string name="me">Me</string>
    <string name="query">Query</string>
    <string name="your">"Your"</string>
    <string name="no_reply">No replies yet</string>
    <string name="upload_in_progress">Upload in Progress</string>
    <string name="image_upload_failed">Image Upload Failed</string>
    <string name="write_message">Write Message</string>
    <string name="compressing_image">Compressing Image</string>
    <string name="no_internet_connection">No Internet Connection</string>
    <string name="querry_answered">Your query is answered</string>
    <string name="enter_valid_name">Enter Valid Name</string>
    <string name="message_delete">Message deleted</string>
    <string name="update_app">Please Update the app to proceed</string>
    <string name="errorfecting">Error fetching data</string>
    <string name="my_queries">My Queries</string>
    <string name="capture">Image Capture</string>
    <string name="soil_test">Soil Test</string>
    <string name="submit">Submit</string>
    <string name="current_location_failed">Current Location not detected</string>
    <string name="next">Next</string>
    <string name="cancel">Cancel</string>
    <string name="tap_location">Tap on the map to select Location</string>
    <string name="back">Back</string>
    <string name="analyze">Analyze</string>
    <string name="save">Save</string>
    <string name="report_saved">Report Saved</string>
    <string name="error_savig_report">Error saving report</string>
    <string name="soil_type">Soil Type</string>
    <string name="organic_carbon">Organic Carbon</string>
    <string name="nitrogen">Nitrogen</string>
    <string name="phosphorus">Phosphorus</string>
    <string name="potassium">Potassium</string>
    <string name="cec">CEC</string>
    <string name="oc_density">OC Density</string>
    <string name="ph_level">pH Level</string>
    <string name="overall_fertility">Overall fertility</string>
    <string name="suitable_crop">Suitable Crop</string>
    <string name="clay">Clay</string>
    <string name="sand">Sand</string>
    <string name="slit">Silt</string>
    <string name="location">Location</string>

</resources>